[package]
name = "gdfc"
version = "0.1.1-alpha"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
steamid-ng = "1.*"
dirs-next = "2.*"
steamlocate = {version = "0.*", features = ["steamid_ng"]}
clap = {version = "4.*", features = ["derive"] }
