[package]
author = "Daniel Garcia"
name = "gdfc"
version = "0.1.1-alpha"
edition = "2021"
about = "Simple CLI tool to transfer Grim Dawn save files from Steam's remote save directory to the default save directory and vice-versa"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
steamid-ng = "1.*"
dirs-next = "2.*"
steamlocate = {version = "1.*", features = ["steamid_ng"]}
clap = {version = "4.*", features = ["derive"] }
